# WebSite

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
static/women/css/: styles.css
templates/: base.html
templates/women/: about.html  add_page.html  detail.html  index.html  list_categories.html
templates/women/includes/: nav.html
women/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
women/templatetags/: women_tags.py
