[tool.poetry]
name = "web-site"
version = "0.1.0"
description = ""
authors = ["Abykeev Nursultan <abykeevnursultan14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
environs = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
