[tool.poetry]
name = "web-site"
version = "0.1.0"
description = ""
authors = ["Abykeev Nursultan <abykeevnursultan14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
environs = "^10.0.0"
ipython = "^8.19.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
